prometheus/operator/manifests/ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: grafana.joker.com
    http:
      paths:
      - path:
        backend: 
          serviceName: grafana
          servicePort: 3000
